# vam

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  configure  configure.ac  create-pg-db.sql  schema.sql  vam-helper.pl  vam.conf.example  vam.crt.example  vam.key.example  vam.pl  vam.pw.example  vam.service.in
debian/: README.Debian  changelog  control  files  rules
debian/patches/: 001  series
debian/source/: include-binaries
init.d/: vam.in
public/css/: app.css  datatables.css  datatables.min.css  foundation-float.css  foundation-float.min.css  foundation.css  foundation.min.css
public/icons/: foundation-icons.css
public/js/: datatables.js  datatables.min.js
rc.d/: vam.in
templs/: exception.development.html.ep  exception.production.html.ep  hello.html.ep  login.html.ep  not_found.production.html.ep  user-add-form.html.ep  user-add-handler.html.ep  user-delete-form.html.ep  user-delete-handler.html.ep  user-list.html.ep  user-rename-form.html.ep  user-rename-handler.html.ep  user-update-form.html.ep  user-update-handler.html.ep
templs/layouts/: default.html.ep
